Add new elemeents

--- a/home.html
+++ b/home.html
@@ -31,14 +31,25 @@
         </div>
     </section>
 
-    <section>
+    <section class="split-section">
         <div>
-            <img class="image-resizer" src="/assets/code-on-laptop.png" alt="code on laptop" />
+            <img class="image-resizer-2" src="/assets/code-on-laptop.png" alt="code on laptop" />
         </div>
-        <div class="">
-            I developed this project using html and CSS, of which I didn’t have
-            prior knowledge. It seemed challenging for me until I found some
-            short length YouTube video that helped a lot. You can check them here!
+        <div class="split-section-text">
+            <h4>Learning HTML & CSS</h4>
+                <p class="text-left">
+                    I developed this project using html and CSS, of which I didn’t have
+                prior knowledge. It seemed challenging for me until I found some
+                short length YouTube videos that helped a lot. <br />
+                You can check them <a href="https://youtube.com/playlist?list=PLAH3edrrJ2bLJBx9x14jKdB4PLCgoC5ZN" target="_blank">
+                here!</a>
+                </p>
+
+                <div class="button-container">
+                    <div class="button">
+                    <a href="learn.html">Check Other Links</a>
+                </div>
+            </div>
         </div>
     </section>
 
