Finish About Me Page

--- a/about_me.html
+++ b/about_me.html
@@ -42,8 +42,139 @@
         </div>
     </section>
 
-    <section>
+    <section class="info-section">
+        <div class="info-section-container">
+            <div>
+                <h4>Education</h4>
+                <ul>
+                    <li>
+                        <div class="school-name">
+                        <div class="dark-button">BRAC University</div> (Bachelor of Science) <br/>
+                        </div>
+                        <div style="font-size: 20px;">
+                        <div class="school-time">Summer 2018 - Present</div>
+                        <div class="school-subject">Major in Computer Science</div> <br />
+                    </li>
+                    <li>
+                        <div class="school-name">
+                        <div class="dark-button">Notre Dame College</div> (Higher Secondary) <br/>
+                        </div>
+                        <div style="font-size: 20px;">
+                        <div class="school-time">July 2015 - July 2017</div>
+                        <div class="school-subject">Subject: Sciences</div> <br />
+                    </li>
+                    <li>
+                        <div class="school-name">
+                        <div class="dark-button">Ideal School & College</div> (Secondary) <br/>
+                        </div>
+                        <div style="font-size: 20px;">
+                        <div class="school-time">2009-2005</div> <br/>
+                    </li>
+                    <li>
+                        <div class="school-name">
+                        <div class="dark-button">Willes Little Flower School & College</div> (Primary) <br/>
+                        </div>
+                        <div style="font-size: 20px;">
+                        <div class="school-time">2004-2008</div> <br/>
+                        <div>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
+        <div class="info-section-container-white">
+
+            <div>
+                <h4>Skills</h4>
+                <table>
+                    <tr>
+                        <td class="td-yellow">Git</td>
+                        <td class="td-dark">GitHub</td>
+                        <td class="td-yellow">GitLab</td>
+                        <td class="td-dark">BitBucket</td>
+                    </tr>
+                    <tr>
+                        <td class="td-dark">Js</td>
+                        <td class="td-yellow">Python</td>
+                        <td class="td-dark">GitLab</td>
+                        <td class="td-yellow">Android</td>
+                    </tr>
+                    <tr>
+                        <td class="td-yellow">UI/UX</td>
+                        <td class="td-dark">Xd/Figma</td>
+                        <td class="td-yellow">MySQL</td>
+                        <td class="td-dark">React.Js</td>
+                    </tr>
+                    <tr style="width: 100%">
+                        <td  class="td-yellow"colspan="5" style="text-align: center;">PostGreSQL</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </section>
+
+    <section class="info-section">
+        <div class="info-section-container-white-2">
+            <div>
+                <h4>Hobbies</h4>
+                <ul>
+                    <li >
+                        <div class="school-name">
+                        <div>1. Reading Books </div>
+                        <div class="dark-button">
+                            My Top 10
+                        </div>
+                        <br/>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="school-name">
+                        <div>1. Reading Books </div>  <br/>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="school-name">
+                        <div>1. Reading Books </div>  <br/>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="info-section-container">
+            <div>
+                <h4>Projects</h4>
+                <ul>
+                    <li>
+                        <div class="school-name">
+                        <div class="dark-button">DevLog</div><br/>
+                        </div>
+                        <div style="font-size: 20px;">
+                        <div class="project-desc">A basic blog built using Python,
+                            Django on the backendand  Bootstrap, CSS, HTML on the frontend.
+                        </div> <br />
+                    </li>
+                    <li>
+                        <div class="school-name">
+                        <div class="dark-button">DocFind</div><br/>
+                        </div>
+                        <div style="font-size: 20px;">
+                        <div class="project-desc">A group project, part of an IEEE Contest.
+                            A webapp for easily finding doctors and getting appointments.
+                        </div> <br />
+                    </li>
+                    <li>
+                        <div class="school-name">
+                        <div class="dark-button">OPlayer</div><br/>
+                        </div>
+                        <div style="font-size: 20px;">
+                        <div class="project-desc">A simple yet feature rich android video player
+                            with additional customization, video trimming and snippet recording options.
+                        </div> <br />
+                    </li>
+                </ul>
+            </div>
+        </div>
     </section>
 
 </body>
