--- a/home.html
+++ b/home.html
@@ -37,16 +37,18 @@
         </div>
         <div class="split-section-text">
             <h4>Learning HTML & CSS</h4>
-                <p class="text-left">
-                    I developed this project using html and CSS, of which I didn’t have
+            <p class="text-left">
+                I developed this project using html and CSS, of which I didn’t have
                 prior knowledge. It seemed challenging for me until I found some
                 short length YouTube videos that helped a lot. <br />
-                You can check them <a href="https://youtube.com/playlist?list=PLAH3edrrJ2bLJBx9x14jKdB4PLCgoC5ZN" target="_blank">
-                here!</a>
-                </p>
+                You can check them
+                <a style="display: inline;" href="https://youtube.com/playlist?list=PLAH3edrrJ2bLJBx9x14jKdB4PLCgoC5ZN" target="_blank">
+                    here!
+                </a>
+            </p>
 
-                <div class="button-container">
-                    <div class="button">
+            <div class="button-container">
+                <div class="button">
                     <a href="learn.html">Check Other Links</a>
                 </div>
             </div>
@@ -54,10 +56,12 @@
     </section>
 
     <footer>
-        <p id="lastModified"></p>
+        <div>
+            <p id="last-modified"></p>
+        </div>
     </footer>
     <script type="text/javascript">
-        document.getElementById("lastModified").setinnerHTML = document.lastModified;
+        document.getElementById('last-modified').innerHTML = document.lastModified;
     </script>
 </body>
 
