--- a/learn.html
+++ b/learn.html
@@ -42,6 +42,7 @@
             <div>
                 <ul>
                     <li class="book-link">
+                        <!-- book section -->
                         <div class="book-link-item">
                             <div class="book-item">1. Linux System Administrators Handbook</div>
                             <div>
