--- a/about_course.html
+++ b/about_course.html
@@ -59,7 +59,7 @@
         <div class="split-section-text">
             <h4>Why This Course ?</h4>
             <p class="text-left">
-                Students will mainly learn different techniques for designing, developing, and evaluating
+                Students will mainly learn techniques for designing, developing, and evaluating
                 Web-based applications. In addition, they will gather knowledge about industry practices.
                 This course will help the students to develop an understanding of how to create a
                 web application from start to finish.
@@ -81,6 +81,15 @@
         </div>
         </div>
     </section>
+    <footer>
+        <div class="lm">
+            <p>Last modified:</p>
+            <p id="last-modified"></p>
+        </div>
+    </footer>
+    <script type="text/javascript">
+        document.getElementById('last-modified').innerHTML = document.lastModified;
+    </script>
 
 </body>
 
