--- a/home.html
+++ b/home.html
@@ -56,7 +56,8 @@
     </section>
 
     <footer>
-        <div>
+        <div class="lm">
+            <p>Last modified:</p>
             <p id="last-modified"></p>
         </div>
     </footer>
