--- a/watch_live.html
+++ b/watch_live.html
@@ -27,7 +27,16 @@
     <iframe frameborder="0" marginheight="40" marginwidth="40px" height="720px" width="67%" src="https://www.youtube.com/embed/-upyPouRrB8" name="iframe_a" scrolling="no" allowfullscreen>
         Your Browser Do not Support Iframe
     </iframe>
-    </section>    
+    </section>
+    <footer>
+        <div class="lm">
+            <p>Last modified:</p>
+            <p id="last-modified"></p>
+        </div>
+    </footer>
+    <script type="text/javascript">
+        document.getElementById('last-modified').innerHTML = document.lastModified;
+    </script>
 
 </body>
 
