--- a/learn.html
+++ b/learn.html
@@ -215,6 +215,16 @@
             </div>
         </div>
     </section>
+    
+    <footer>
+        <div class="lm">
+            <p>Last modified:</p>
+            <p id="last-modified"></p>
+        </div>
+    </footer>
+    <script type="text/javascript">
+        document.getElementById('last-modified').innerHTML = document.lastModified;
+    </script>
 
 </body>
 
