Remove erros found from validator

--- a/learn.html
+++ b/learn.html
@@ -13,7 +13,7 @@
             <li><a class="navbar-item" href="home.html">Home</a></li>
             <li><a class="active navbar-item" href="#">Learn</a></li>
             <li><a class="navbar-item" href="about_course.html">About CSE391</a></li>
-            <li><a class="navbar-item" href="about_me.html">About Me</a></li>            
+            <li><a class="navbar-item" href="about_me.html">About Me</a></li>
         </ul>
     </header>
 
@@ -221,7 +221,7 @@
             <p id="last-modified"></p>
         </div>
     </footer>
-    <script type="text/javascript">
+    <script>
         document.getElementById('last-modified').innerHTML = document.lastModified;
     </script>
 
