--- a/about_course.html
+++ b/about_course.html
@@ -12,7 +12,7 @@
         <li><a class="navbar-item" href="home.html">Home</a></li>
         <li><a class="navbar-item" href="learn.html">Learn</a></li>
         <li><a class="active navbar-item" href="#">About CSE391</a></li>
-        <li><a class="navbar-item" href="about_me.html">About Me</a></li>        
+        <li><a class="navbar-item" href="about_me.html">About Me</a></li>
     </ul>
 
     <section>
@@ -23,7 +23,7 @@
             <div class="centered">
                 CSE391 <br />
                 Programmng For The Internet <br />
-                <div style="font-size: 20px; font-weight: medium; padding: 10px;">
+                <div style="font-size: 20px; font-weight: normal; padding: 10px;">
                     Course Instructor: <br />
                     Mohammad Abdur Rahman Adnan, BRAC University
                 </div>
@@ -64,9 +64,6 @@
                 web application from start to finish.
             </p>
         </div>
-        </div>
-    </section>
-
     </section>
 
     <section class="full-width-section">
@@ -78,7 +75,6 @@
                 or higher. There is one section and one faculty, Mohammad Adnan Rahman, for this course.
             </p>
         </div>
-        </div>
     </section>
     <footer>
         <div class="lm">
@@ -86,7 +82,7 @@
             <p id="last-modified"></p>
         </div>
     </footer>
-    <script type="text/javascript">
+    <script>
         document.getElementById('last-modified').innerHTML = document.lastModified;
     </script>
 
