--- a/about_me.html
+++ b/about_me.html
@@ -12,7 +12,7 @@
         <li><a class="navbar-item" href="home.html">Home</a></li>
         <li><a class="navbar-item" href="learn.html">Learn</a></li>
         <li><a class="navbar-item" href="about_course.html">About CSE391</a></li>
-        <li><a class="active navbar-item" href="#">About Me</a></li>        
+        <li><a class="active navbar-item" href="#">About Me</a></li>
     </ul>
 
     <section class="name-section">
@@ -55,7 +55,8 @@
                         </div>
                         <div style="font-size: 20px;">
                         <div class="school-time">Summer 2018 - Present</div>
-                        <div class="school-subject">Major in Computer Science</div> <br />
+                        <div class="school-subject">Major in Computer Science</div>
+                        </div><br />
                     </li>
                     <li>
                         <div class="school-name">
@@ -65,7 +66,8 @@
                         </div>
                         <div style="font-size: 20px;">
                         <div class="school-time">July 2015 - July 2017</div>
-                        <div class="school-subject">Subject: Sciences</div> <br />
+                        <div class="school-subject">Subject: Sciences</div>
+                        </div> <br />
                     </li>
                     <li>
                         <div class="school-name">
@@ -73,6 +75,7 @@
                         </div>
                         <div style="font-size: 20px;">
                         <div class="school-time">2009-2005</div> <br/>
+                        </div>
                     </li>
                     <li>
                         <div class="school-name">
@@ -80,7 +83,7 @@
                         </div>
                         <div style="font-size: 20px;">
                         <div class="school-time">2004-2008</div> <br/>
-                        <div>
+                    </div>
                     </li>
                 </ul>
             </div>
@@ -110,7 +113,7 @@
                         <td class="td-dark">React.Js</td>
                     </tr>
                     <tr style="width: 100%">
-                        <td  class="td-yellow"colspan="5" style="text-align: center;">PostGreSQL</td>
+                        <td  class="td-yellow" colspan="4" style="text-align: center;">PostGreSQL</td>
                     </tr>
                 </table>
             </div>
@@ -168,6 +171,7 @@
                         <div class="project-desc">A basic blog built using Python,
                             Django on the backendand  Bootstrap, CSS, HTML on the frontend.
                         </div> <br />
+                        </div>
                     </li>
                     <li>
                         <div class="school-name">
@@ -181,6 +185,7 @@
                         <div class="project-desc">A group project, part of an IEEE Contest.
                             A webapp for easily finding doctors and getting appointments.
                         </div> <br />
+                        </div>
                     </li>
                     <li>
                         <div class="school-name">
@@ -194,6 +199,7 @@
                         <div class="project-desc">A simple yet feature rich android video player
                             with additional customization, video trimming and snippet recording options.
                         </div> <br />
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -206,7 +212,7 @@
             <p id="last-modified"></p>
         </div>
     </footer>
-    <script type="text/javascript">
+    <script>
         document.getElementById('last-modified').innerHTML = document.lastModified;
     </script>
 
