--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
             <li><a class="active navbar-item" href="#">Home</a></li>
             <li><a class="navbar-item" href="learn.html">Learn</a></li>
             <li><a class="navbar-item" href="about_course.html">About CSE391</a></li>
-            <li><a class="navbar-item" href="about_me.html">About Me</a></li>            
+            <li><a class="navbar-item" href="about_me.html">About Me</a></li>
         </ul>
     </header>
 
@@ -60,7 +60,7 @@
             <p id="last-modified"></p>
         </div>
     </footer>
-    <script type="text/javascript">
+    <script>
         document.getElementById('last-modified').innerHTML = document.lastModified;
     </script>
 </body>
