Correct Color matching

--- a/about_me.html
+++ b/about_me.html
@@ -103,7 +103,7 @@
                     <tr>
                         <td class="td-dark">Js</td>
                         <td class="td-yellow">Python</td>
-                        <td class="td-dark">GitLab</td>
+                        <td class="td-dark">Java</td>
                         <td class="td-yellow">Android</td>
                     </tr>
                     <tr>
@@ -131,7 +131,7 @@
                                 1. Reading Books
                             </div>
                             <div style="margin-left: 20px;">
-                                <a class="dark-button" href="learn.html">My Top 10</a>
+                                <a class="dark-button-2" href="learn.html">My Top 10</a>
                             </div>
                             <br/>
                         </div>
@@ -140,7 +140,7 @@
                         <div class="hobbies">
                         <div style="margin-right: 10px;">2. Playing Video Games </div>
                         <div>
-                            <a class="dark-button" href="https://steamcommunity.com/id/the_real_shs/" target="_blank">Steam ID</a>
+                            <a class="dark-button-2" href="https://steamcommunity.com/id/the_real_shs/" target="_blank">Steam ID</a>
                         </div>
                         <br/>
                         </div>
