Remove errors found from validators

--- a/about_course.html
+++ b/about_course.html
@@ -24,7 +24,7 @@
             <div class="centered">
                 CSE391 <br />
                 Programmng For The Internet <br />
-                <div style="font-size: 20px; font-weight: medium; padding: 10px;">
+                <div style="font-size: 20px; font-weight: normal; padding: 10px;">
                     Course Instructor: <br />
                     Mohammad Abdur Rahman Adnan, BRAC University
                 </div>
@@ -65,9 +65,6 @@
                 web application from start to finish.
             </p>
         </div>
-        </div>
-    </section>
-
     </section>
 
     <section class="full-width-section">
@@ -79,7 +76,6 @@
                 or higher. There is one section and one faculty, Mohammad Adnan Rahman, for this course.
             </p>
         </div>
-        </div>
     </section>
     <footer>
         <div class="lm">
@@ -87,7 +83,7 @@
             <p id="last-modified"></p>
         </div>
     </footer>
-    <script type="text/javascript">
+    <script>
         document.getElementById('last-modified').innerHTML = document.lastModified;
     </script>
 
