--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
             <p id="last-modified"></p>
         </div>
     </footer>
-    <script type="text/javascript">
+    <script>
         document.getElementById('last-modified').innerHTML = document.lastModified;
     </script>
 </body>
