--- a/about_me.html
+++ b/about_me.html
@@ -56,7 +56,8 @@
                         </div>
                         <div style="font-size: 20px;">
                         <div class="school-time">Summer 2018 - Present</div>
-                        <div class="school-subject">Major in Computer Science</div> <br />
+                        <div class="school-subject">Major in Computer Science</div>
+                        </div><br />
                     </li>
                     <li>
                         <div class="school-name">
@@ -66,7 +67,8 @@
                         </div>
                         <div style="font-size: 20px;">
                         <div class="school-time">July 2015 - July 2017</div>
-                        <div class="school-subject">Subject: Sciences</div> <br />
+                        <div class="school-subject">Subject: Sciences</div>
+                        </div> <br />
                     </li>
                     <li>
                         <div class="school-name">
@@ -74,6 +76,7 @@
                         </div>
                         <div style="font-size: 20px;">
                         <div class="school-time">2009-2005</div> <br/>
+                        </div>
                     </li>
                     <li>
                         <div class="school-name">
@@ -81,7 +84,7 @@
                         </div>
                         <div style="font-size: 20px;">
                         <div class="school-time">2004-2008</div> <br/>
-                        <div>
+                    </div>
                     </li>
                 </ul>
             </div>
@@ -101,7 +104,7 @@
                     <tr>
                         <td class="td-dark">Js</td>
                         <td class="td-yellow">Python</td>
-                        <td class="td-dark">GitLab</td>
+                        <td class="td-dark">Java</td>
                         <td class="td-yellow">Android</td>
                     </tr>
                     <tr>
@@ -111,7 +114,7 @@
                         <td class="td-dark">React.Js</td>
                     </tr>
                     <tr style="width: 100%">
-                        <td  class="td-yellow"colspan="5" style="text-align: center;">PostGreSQL</td>
+                        <td  class="td-yellow" colspan="4" style="text-align: center;">PostGreSQL</td>
                     </tr>
                 </table>
             </div>
@@ -129,7 +132,7 @@
                                 1. Reading Books
                             </div>
                             <div style="margin-left: 20px;">
-                                <a class="dark-button" href="learn.html">My Top 10</a>
+                                <a class="dark-button-2" href="learn.html">My Top 10</a>
                             </div>
                             <br/>
                         </div>
@@ -138,7 +141,7 @@
                         <div class="hobbies">
                         <div style="margin-right: 10px;">2. Playing Video Games </div>
                         <div>
-                            <a class="dark-button" href="https://steamcommunity.com/id/the_real_shs/" target="_blank">Steam ID</a>
+                            <a class="dark-button-2" href="https://steamcommunity.com/id/the_real_shs/" target="_blank">Steam ID</a>
                         </div>
                         <br/>
                         </div>
@@ -169,6 +172,7 @@
                         <div class="project-desc">A basic blog built using Python,
                             Django on the backendand  Bootstrap, CSS, HTML on the frontend.
                         </div> <br />
+                        </div>
                     </li>
                     <li>
                         <div class="school-name">
@@ -182,6 +186,7 @@
                         <div class="project-desc">A group project, part of an IEEE Contest.
                             A webapp for easily finding doctors and getting appointments.
                         </div> <br />
+                        </div>
                     </li>
                     <li>
                         <div class="school-name">
@@ -195,6 +200,7 @@
                         <div class="project-desc">A simple yet feature rich android video player
                             with additional customization, video trimming and snippet recording options.
                         </div> <br />
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -207,7 +213,7 @@
             <p id="last-modified"></p>
         </div>
     </footer>
-    <script type="text/javascript">
+    <script>
         document.getElementById('last-modified').innerHTML = document.lastModified;
     </script>
 
