--- a/learn.html
+++ b/learn.html
@@ -215,14 +215,14 @@
             </div>
         </div>
     </section>
-    
+
     <footer>
         <div class="lm">
             <p>Last modified:</p>
             <p id="last-modified"></p>
         </div>
     </footer>
-    <script type="text/javascript">
+    <script>
         document.getElementById('last-modified').innerHTML = document.lastModified;
     </script>
 
