--- a/watch_live.html
+++ b/watch_live.html
@@ -24,7 +24,7 @@
     </h1>
 
     <section style="display: flex; justify-content:center;">
-    <iframe frameborder="0" marginheight="40" marginwidth="40px" height="720px" width="67%" src="https://cdn2.crichd.pro/embed2.php?id=skysp2&q=Sky" name="iframe_a" scrolling="no" allowfullscreen>
+    <iframe frameborder="0" marginheight="40" marginwidth="40px" height="720px" width="67%" src="https://www.youtube.com/watch?v=-upyPouRrB8" name="iframe_a" scrolling="no" allowfullscreen>
         Your Browser Do not Support Iframe
     </iframe>
     </section>
